--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@iconify-json/tabler": "^1.1.87",
 		"@playwright/test": "^1.28.1",
+		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@unocss/svelte-scoped": "^0.55.0",
+		"@unocss/transformer-variant-group": "^0.55.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -29,8 +33,17 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"unocss": "^0.55.0",
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@unocss/reset": "^0.55.0"
+	},
+	"overrides": {
+		"@rgossiaux/svelte-headlessui": {
+			"svelte": "$svelte"
+		}
+	}
 }
