--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@iconify-json/tabler": "^1.1.87",
+		"@iconify/svelte": "^3.1.4",
 		"@playwright/test": "^1.28.1",
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
