--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@unocss/reset": "^0.55.0"
+		"@unocss/reset": "^0.55.0",
+		"@vercel/analytics": "^1.0.2"
 	},
 	"overrides": {
 		"@rgossiaux/svelte-headlessui": {
