--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 	"type": "module",
 	"dependencies": {
 		"@unocss/reset": "^0.55.0",
-		"@vercel/analytics": "^1.0.2"
+		"@vercel/analytics": "^1.0.2",
+		"web-vitals": "^3.4.0"
 	},
 	"overrides": {
 		"@rgossiaux/svelte-headlessui": {
