--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"unocss": "^0.55.0",
+		"unocss-preset-radix": "^2.5.5",
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
