--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"dependencies": {
 		"@unocss/reset": "^0.55.0",
 		"@vercel/analytics": "^1.0.2",
+		"svelte-media-queries": "^1.6.1",
 		"web-vitals": "^3.4.0"
 	},
 	"overrides": {
