--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@typescript-eslint/parser": "^5.45.0",
 		"@unocss/svelte-scoped": "^0.55.0",
 		"@unocss/transformer-variant-group": "^0.55.0",
+		"@zerodevx/svelte-img": "^2.0.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
