--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@beyonk/gdpr-cookie-consent-banner": "^10.2.1",
 		"@iconify-json/tabler": "^1.1.87",
 		"@iconify/svelte": "^3.1.4",
 		"@julr/unocss-preset-heropatterns": "^1.0.2",
@@ -27,6 +28,7 @@
 		"@unocss/svelte-scoped": "^0.55.0",
 		"@unocss/transformer-variant-group": "^0.55.0",
 		"@zerodevx/svelte-img": "^2.0.3",
+		"deserialize-json-api": "^1.4.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
