--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 engine-strict=true
 resolution-mode=highest
+# WSL2 Support (since symlink is not supported yet)
+node-linker=hoisted
+symlink=false
