--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
 	"version": "0.0.2",
 	"private": true,
 	"scripts": {
+		"preinstall": "npx only-allow pnpm",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"test": "npm run test:integration && npm run test:unit",
+		"test": "pnpm test:integration && pnpm test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -51,9 +52,11 @@
 		"svelte-media-queries": "^1.6.1",
 		"web-vitals": "^3.4.0"
 	},
-	"overrides": {
-		"@rgossiaux/svelte-headlessui": {
-			"svelte": "$svelte"
+	"pnpm": {
+		"peerDependencyRules": {
+			"allowedVersions": {
+				"@rgossiaux/svelte-headlessui>svelte": "4"
+			}
 		}
 	}
 }
