--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@unocss/reset": "^0.55.0",
 		"@vercel/analytics": "^1.0.2",
 		"svelte-media-queries": "^1.6.1",
