--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"mdsvex": "^0.11.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
@@ -58,6 +59,9 @@
 			"allowedVersions": {
 				"@rgossiaux/svelte-headlessui>svelte": "4"
 			}
+		},
+		"patchedDependencies": {
+			"@unocss/preset-typography@0.55.0": "patches/@unocss__preset-typography@0.55.0.patch"
 		}
 	}
 }
