--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@roarr/browser-log-writer": "^1.3.0",
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@unocss/reset": "^0.55.0",
 		"@vercel/analytics": "^1.0.2",
+		"globalthis": "^1.0.3",
+		"roarr": "^7.15.1",
 		"svelte-media-queries": "^1.6.1",
 		"web-vitals": "^3.4.0"
 	},
