--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
 	},
 	"devDependencies": {
 		"@beyonk/gdpr-cookie-consent-banner": "^10.2.1",
-		"@iconify-json/tabler": "^1.1.87",
 		"@iconify/svelte": "^3.1.4",
-		"@julr/unocss-preset-heropatterns": "^1.0.2",
 		"@macfja/svelte-persistent-store": "^2.4.0",
+		"@notionhq/client": "^2.2.13",
 		"@playwright/test": "^1.28.1",
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -29,18 +28,20 @@
 		"@typescript-eslint/parser": "^5.45.0",
 		"@unocss/svelte-scoped": "^0.55.0",
 		"@unocss/transformer-variant-group": "^0.55.0",
+		"@unpic/svelte": "^0.0.31",
 		"@zerodevx/svelte-img": "^2.0.3",
-		"deserialize-json-api": "^1.4.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"mdsvex": "^0.11.0",
+		"neverthrow": "^6.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-i18n": "^3.7.0",
-		"sveltekit-notion-blog": "^0.1.7",
+		"svelte-meta-tags": "^3.0.4",
+		"sveltekit-embed": "^0.0.12",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"unocss": "^0.55.0",
@@ -51,12 +52,8 @@
 	"type": "module",
 	"dependencies": {
 		"@roarr/browser-log-writer": "^1.3.0",
-		"@sveltejs/adapter-vercel": "^3.0.3",
-		"@unocss/reset": "^0.55.0",
 		"@vercel/analytics": "^1.0.2",
-		"globalthis": "^1.0.3",
 		"roarr": "^7.15.1",
-		"svelte-media-queries": "^1.6.1",
 		"web-vitals": "^3.4.0"
 	},
 	"pnpm": {
@@ -66,8 +63,7 @@
 			}
 		},
 		"patchedDependencies": {
-			"@unocss/preset-typography@0.55.0": "patches/@unocss__preset-typography@0.55.0.patch",
-			"sveltekit-notion-blog@0.1.7": "patches/sveltekit-notion-blog@0.1.7.patch"
+			"@unocss/preset-typography@0.55.0": "patches/@unocss__preset-typography@0.55.0.patch"
 		}
 	}
 }
