--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"eslint-plugin-unused-imports": "^3.0.0",
 		"mdsvex": "^0.11.0",
 		"neverthrow": "^6.0.0",
 		"prettier": "^2.8.0",
