--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
+		"head": "link:@unocss/eslint-config#pull/3142/head",
 		"mdsvex": "^0.11.0",
 		"neverthrow": "^6.0.0",
 		"prettier": "^2.8.0",
