--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
 		"@unocss/transformer-variant-group": "^0.56.4",
 		"@unpic/svelte": "^0.0.31",
 		"@zerodevx/svelte-img": "^2.1.0",
+		"browserslist": "^4.22.1",
+		"browserslist-useragent-regexp": "^4.1.0",
 		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.33.2",
 		"eslint-plugin-unused-imports": "^3.0.0",
+		"lightningcss": "^1.22.0",
 		"mdsvex": "^0.11.0",
 		"neverthrow": "^6.0.0",
 		"prettier": "^2.8.0",
@@ -46,10 +49,12 @@
 		"svelte-i18n": "^3.7.3",
 		"svelte-legos": "^0.2.2",
 		"svelte-meta-tags": "^3.0.4",
+		"svelte-modals": "^1.3.0",
 		"sveltekit-embed": "^0.0.12",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"unocss": "^0.56.4",
+		"unocss-preset-autoprefixer": "^0.0.6",
 		"unocss-preset-radix": "^2.5.5",
 		"vite": "^4.4.9",
 		"vitest": "^0.34.5"
