--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/kit": "^1.25.1",
+		"@types/canvas-confetti": "^1.6.1",
 		"@typescript-eslint/eslint-plugin": "^6.7.3",
 		"@typescript-eslint/parser": "^6.7.3",
 		"@unocss/eslint-config": "^0.56.4",
@@ -35,6 +36,7 @@
 		"@zerodevx/svelte-img": "^2.1.0",
 		"browserslist": "^4.22.1",
 		"browserslist-useragent-regexp": "^4.1.0",
+		"canvas-confetti": "^1.6.1",
 		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.33.2",
