--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@playwright/test": "^1.38.1",
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/kit": "^1.25.1",
 		"@types/canvas-confetti": "^1.6.1",
