--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
-		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/kit": "^1.25.1",
 		"@types/canvas-confetti": "^1.6.1",
 		"@typescript-eslint/eslint-plugin": "^6.7.3",
@@ -44,6 +43,7 @@
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"lightningcss": "^1.22.0",
 		"mdsvex": "^0.11.0",
+		"network-information-types": "^0.1.1",
 		"neverthrow": "^6.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
@@ -65,7 +65,6 @@
 	"type": "module",
 	"dependencies": {
 		"@roarr/browser-log-writer": "^1.3.0",
-		"@vercel/analytics": "^1.0.2",
 		"roarr": "^7.15.1",
 		"web-vitals": "^3.5.0"
 	},
