--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"browserslist": "^4.22.1",
 		"browserslist-useragent-regexp": "^4.1.0",
 		"canvas-confetti": "^1.6.1",
+		"dayjs": "^1.11.10",
 		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.33.2",
