--- a/package.json
+++ b/package.json
@@ -1,94 +1,103 @@
 {
-	"name": "vegas",
-	"version": "0.1.4",
-	"private": true,
-	"scripts": {
-		"preinstall": "npx only-allow pnpm",
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "pnpm test:integration && pnpm test:unit",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"lint:fix": "prettier --plugin-search-dir . --write . && eslint . --fix",
-		"format": "prettier --plugin-search-dir . --write .",
-		"test:integration": "playwright test",
-		"test:unit": "vitest",
-		"commit": "git-cz"
-	},
-	"devDependencies": {
-		"@beyonk/gdpr-cookie-consent-banner": "^11.0.0",
-		"@commitlint/cli": "^17.7.2",
-		"@commitlint/config-conventional": "^17.7.0",
-		"@commitlint/cz-commitlint": "^17.7.2",
-		"@commitlint/prompt-cli": "^17.7.2",
-		"@iconify/svelte": "^3.1.4",
-		"@macfja/svelte-persistent-store": "^2.4.0",
-		"@notionhq/client": "^2.2.13",
-		"@playwright/test": "^1.38.1",
-		"@rgossiaux/svelte-headlessui": "^2.0.0",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/adapter-cloudflare": "^2.3.3",
-		"@sveltejs/kit": "^1.25.1",
-		"@types/canvas-confetti": "^1.6.1",
-		"@typescript-eslint/eslint-plugin": "^6.7.3",
-		"@typescript-eslint/parser": "^6.7.3",
-		"@unocss/eslint-config": "^0.56.4",
-		"@unocss/svelte-scoped": "^0.56.4",
-		"@unocss/transformer-variant-group": "^0.56.4",
-		"@unpic/svelte": "^0.0.31",
-		"@zerodevx/svelte-img": "^2.1.0",
-		"browserslist": "^4.22.1",
-		"browserslist-useragent-regexp": "^4.1.0",
-		"canvas-confetti": "^1.6.1",
-		"commitizen": "^4.3.0",
-		"dayjs": "^1.11.10",
-		"eslint": "^8.50.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.33.2",
-		"eslint-plugin-unused-imports": "^3.0.0",
-		"husky": "^8.0.3",
-		"inquirer": "8",
-		"lightningcss": "^1.22.0",
-		"maskdata": "^1.2.2",
-		"mdsvex": "^0.11.0",
-		"network-information-types": "^0.1.1",
-		"neverthrow": "^6.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.2.1",
-		"svelte-check": "^3.5.2",
-		"svelte-i18n": "^3.7.3",
-		"svelte-legos": "^0.2.2",
-		"svelte-meta-tags": "^3.0.4",
-		"svelte-modals": "^1.3.0",
-		"sveltekit-embed": "^0.0.12",
-		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"unocss": "^0.56.4",
-		"unocss-preset-autoprefixer": "^0.0.6",
-		"unocss-preset-radix": "^2.5.5",
-		"vite": "^4.4.9",
-		"vitest": "^0.34.5",
-		"wretch": "^2.7.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@roarr/browser-log-writer": "^1.3.0",
-		"roarr": "^7.15.1",
-		"web-vitals": "^3.5.0"
-	},
-	"pnpm": {
-		"peerDependencyRules": {
-			"allowedVersions": {
-				"@rgossiaux/svelte-headlessui>svelte": "4"
-			}
-		}
-	},
-	"config": {
-		"commitizen": {
-			"path": "@commitlint/cz-commitlint"
-		}
-	}
+  "name": "vegas",
+  "version": "0.0.0-development",
+  "private": true,
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "pnpm test:integration && pnpm test:unit",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "lint:fix": "prettier --plugin-search-dir . --write . && eslint . --fix",
+    "format": "prettier --plugin-search-dir . --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest",
+    "commit": "git-cz",
+    "semantic-release": "semantic-release"
+  },
+  "devDependencies": {
+    "@beyonk/gdpr-cookie-consent-banner": "^11.0.0",
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@commitlint/cz-commitlint": "^17.7.2",
+    "@commitlint/prompt-cli": "^17.7.2",
+    "@iconify/svelte": "^3.1.4",
+    "@macfja/svelte-persistent-store": "^2.4.0",
+    "@notionhq/client": "^2.2.13",
+    "@playwright/test": "^1.38.1",
+    "@rgossiaux/svelte-headlessui": "^2.0.0",
+    "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/adapter-cloudflare": "^2.3.3",
+    "@sveltejs/kit": "^1.25.1",
+    "@types/canvas-confetti": "^1.6.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "@unocss/eslint-config": "^0.56.4",
+    "@unocss/svelte-scoped": "^0.56.4",
+    "@unocss/transformer-variant-group": "^0.56.4",
+    "@unpic/svelte": "^0.0.31",
+    "@zerodevx/svelte-img": "^2.1.0",
+    "browserslist": "^4.22.1",
+    "browserslist-useragent-regexp": "^4.1.0",
+    "canvas-confetti": "^1.6.1",
+    "commitizen": "^4.3.0",
+    "dayjs": "^1.11.10",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.33.2",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.3",
+    "inquirer": "8",
+    "lightningcss": "^1.22.0",
+    "maskdata": "^1.2.2",
+    "mdsvex": "^0.11.0",
+    "network-information-types": "^0.1.1",
+    "neverthrow": "^6.0.0",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.10.1",
+    "semantic-release": "^22.0.5",
+    "svelte": "^4.2.1",
+    "svelte-check": "^3.5.2",
+    "svelte-i18n": "^3.7.3",
+    "svelte-legos": "^0.2.2",
+    "svelte-meta-tags": "^3.0.4",
+    "svelte-modals": "^1.3.0",
+    "sveltekit-embed": "^0.0.12",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "unocss": "^0.56.4",
+    "unocss-preset-autoprefixer": "^0.0.6",
+    "unocss-preset-radix": "^2.5.5",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.5",
+    "wretch": "^2.7.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "@roarr/browser-log-writer": "^1.3.0",
+    "roarr": "^7.15.1",
+    "web-vitals": "^3.5.0"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "@rgossiaux/svelte-headlessui>svelte": "4"
+      }
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sxyalliance/vegas.git"
+  },
+  "publishConfig": {
+    "access": "restricted"
+  }
 }
