--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vegas",
   "version": "0.0.0-development",
   "private": true,
+  "packageManager": "pnpm@8.8.0",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "vite dev",
