--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - name: Validate current commit
         if: github.event_name == 'push'
-        run: pnpm commitlint --from=HEAD~1 --to=HEAD --verbose
+        run: pnpm commitlint --from HEAD~1 --to HEAD --verbose
       - name: Validate PR commits
         if: github.event_name == 'pull_request'
-        run: pnpm commitlint --from=${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to=${{ github.event.pull_request.head.sha }} --verbose
+        run: pnpm commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
