--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"semantic-release": "^22.0.5",
+		"serializr": "^3.0.2",
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
 		"svelte-i18n": "^3.7.3",
