--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
 		"@macfja/svelte-persistent-store": "^2.4.0",
 		"@notionhq/client": "^2.2.13",
 		"@playwright/test": "^1.38.1",
+		"@radix-ui/colors": "^3.0.0",
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.25.1",
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/canvas-confetti": "^1.6.1",
 		"@typescript-eslint/eslint-plugin": "^6.7.4",
 		"@typescript-eslint/parser": "^6.7.4",
@@ -41,6 +43,7 @@
 		"@unocss/transformer-variant-group": "^0.56.5",
 		"@unpic/svelte": "^0.0.31",
 		"@zerodevx/svelte-img": "^2.1.0",
+		"autoprefixer": "^10.4.16",
 		"browserslist": "^4.22.1",
 		"browserslist-useragent-regexp": "^4.1.0",
 		"canvas-confetti": "^1.9.0",
@@ -57,6 +60,7 @@
 		"mdsvex": "^0.11.0",
 		"network-information-types": "^0.1.1",
 		"neverthrow": "^6.0.0",
+		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"semantic-release": "^22.0.5",
@@ -68,6 +72,7 @@
 		"svelte-meta-tags": "^3.0.4",
 		"svelte-modals": "^1.3.0",
 		"sveltekit-embed": "^0.0.12",
+		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.2",
 		"typescript": "^4.9.5",
 		"unocss": "^0.56.5",
@@ -75,6 +80,7 @@
 		"unocss-preset-radix": "^2.5.5",
 		"vite": "^4.4.11",
 		"vitest": "^0.34.6",
+		"windy-radix-palette": "2.0.0-beta.0",
 		"wretch": "^2.7.0"
 	},
 	"type": "module",
