--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"@commitlint/prompt-cli": "^17.7.2",
 		"@iconify/svelte": "^3.1.4",
 		"@macfja/svelte-persistent-store": "^2.4.0",
+		"@melt-ui/pp": "^0.1.2",
+		"@melt-ui/svelte": "^0.53.0",
 		"@notionhq/client": "^2.2.13",
 		"@playwright/test": "^1.38.1",
 		"@radix-ui/colors": "^3.0.0",
@@ -61,6 +63,8 @@
 		"network-information-types": "^0.1.1",
 		"neverthrow": "^6.0.0",
 		"postcss": "^8.4.31",
+		"postcss-import": "^15.1.0",
+		"postcss-nesting": "^12.0.1",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.4.1",
@@ -72,6 +76,7 @@
 		"svelte-legos": "^0.2.2",
 		"svelte-meta-tags": "^3.0.4",
 		"svelte-modals": "^1.3.0",
+		"svelte-sequential-preprocessor": "^2.0.1",
 		"sveltekit-embed": "^0.0.12",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.2",
