--- a/package.json
+++ b/package.json
@@ -1,128 +1,130 @@
 {
-  "name": "vegas",
-  "version": "0.0.0-development",
-  "private": true,
-  "packageManager": "pnpm@8.8.0",
-  "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "pnpm test:integration && pnpm test:unit",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "lint:fix": "prettier --plugin-search-dir . --write . && eslint . --fix",
-    "format": "prettier --plugin-search-dir . --write .",
-    "test:integration": "playwright test",
-    "test:unit": "vitest",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release --branches main",
-    "story:dev": "histoire dev",
-    "story:build": "histoire build",
-    "story:preview": "histoire preview",
-    "graphql:codegen": "graphql codegen"
-  },
-  "devDependencies": {
-    "@beyonk/gdpr-cookie-consent-banner": "^11.0.0",
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@commitlint/cz-commitlint": "^17.7.2",
-    "@commitlint/prompt-cli": "^17.7.2",
-    "@directus/sdk": "^12.0.1",
-    "@histoire/plugin-svelte": "^0.17.0",
-    "@iconify/svelte": "^3.1.4",
-    "@macfja/svelte-persistent-store": "^2.4.0",
-    "@melt-ui/pp": "^0.1.2",
-    "@melt-ui/svelte": "^0.53.0",
-    "@notionhq/client": "^2.2.13",
-    "@playwright/test": "^1.38.1",
-    "@radix-ui/colors": "^3.0.0",
-    "@rgossiaux/svelte-headlessui": "^2.0.0",
-    "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/adapter-cloudflare": "^2.3.3",
-    "@sveltejs/kit": "^1.25.1",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/canvas-confetti": "^1.6.1",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "@unocss/eslint-config": "^0.56.5",
-    "@unocss/svelte-scoped": "^0.56.5",
-    "@unocss/transformer-variant-group": "^0.56.5",
-    "@unpic/svelte": "^0.0.31",
-    "@zerodevx/svelte-img": "^2.1.0",
-    "autoprefixer": "^10.4.16",
-    "browserslist": "^4.22.1",
-    "browserslist-useragent-regexp": "^4.1.0",
-    "canvas-confetti": "^1.9.0",
-    "commitizen": "^4.3.0",
-    "dayjs": "^1.11.10",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-svelte": "^2.34.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "histoire": "^0.17.2",
-    "husky": "^8.0.3",
-    "inquirer": "8.2.6",
-    "lightningcss": "^1.22.0",
-    "maskdata": "^1.2.2",
-    "mdsvex": "^0.11.0",
-    "network-information-types": "^0.1.1",
-    "neverthrow": "^6.0.0",
-    "openapi-typescript": "7.0.0-next.2",
-    "postcss": "^8.4.31",
-    "postcss-import": "^15.1.0",
-    "postcss-nesting": "^12.0.1",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "semantic-release": "^22.0.5",
-    "serializr": "^3.0.2",
-    "svelte": "^4.2.1",
-    "svelte-check": "^3.5.2",
-    "svelte-i18n": "^3.7.3",
-    "svelte-legos": "^0.2.2",
-    "svelte-meta-tags": "^3.0.4",
-    "svelte-modals": "^1.3.0",
-    "svelte-sequential-preprocessor": "^2.0.1",
-    "sveltekit-embed": "^0.0.12",
-    "tailwindcss": "^3.3.3",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "unocss": "^0.56.5",
-    "unocss-preset-autoprefixer": "^0.0.6",
-    "unocss-preset-radix": "^2.5.5",
-    "vite": "^4.4.11",
-    "vitest": "^0.34.6",
-    "windy-radix-palette": "2.0.0-beta.0",
-    "wretch": "^2.7.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@roarr/browser-log-writer": "^1.3.0",
-    "roarr": "^7.15.1",
-    "web-vitals": "^3.5.0"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "allowedVersions": {
-        "@rgossiaux/svelte-headlessui>svelte": "4"
-      }
-    },
-    "overrides": {
-      "postcss@<8.4.31": ">=8.4.31"
-    }
-  },
-  "config": {
-    "commitizen": {
-      "path": "@commitlint/cz-commitlint"
-    }
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sxyalliance/vegas.git"
-  },
-  "publishConfig": {
-    "access": "restricted"
-  }
+	"name": "vegas",
+	"version": "0.0.0-development",
+	"private": true,
+	"packageManager": "pnpm@8.8.0",
+	"scripts": {
+		"preinstall": "npx only-allow pnpm",
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "pnpm test:integration && pnpm test:unit",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"lint:fix": "prettier --plugin-search-dir . --write . && eslint . --fix",
+		"format": "prettier --plugin-search-dir . --write .",
+		"test:integration": "playwright test",
+		"test:unit": "vitest",
+		"commit": "git-cz",
+		"semantic-release": "semantic-release --branches main",
+		"story:dev": "histoire dev",
+		"story:build": "histoire build",
+		"story:preview": "histoire preview",
+		"graphql:codegen": "graphql codegen"
+	},
+	"devDependencies": {
+		"@beyonk/gdpr-cookie-consent-banner": "^11.0.0",
+		"@commitlint/cli": "^17.7.2",
+		"@commitlint/config-conventional": "^17.7.0",
+		"@commitlint/cz-commitlint": "^17.7.2",
+		"@commitlint/prompt-cli": "^17.7.2",
+		"@directus/sdk": "^12.0.1",
+		"@histoire/plugin-svelte": "^0.17.0",
+		"@iconify/svelte": "^3.1.4",
+		"@macfja/svelte-persistent-store": "^2.4.0",
+		"@melt-ui/pp": "^0.1.2",
+		"@melt-ui/svelte": "^0.53.0",
+		"@notionhq/client": "^2.2.13",
+		"@playwright/test": "^1.38.1",
+		"@radix-ui/colors": "^3.0.0",
+		"@rgossiaux/svelte-headlessui": "^2.0.0",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
+		"@sveltejs/kit": "^1.25.1",
+		"@tailwindcss/typography": "^0.5.10",
+		"@types/canvas-confetti": "^1.6.1",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
+		"@unocss/eslint-config": "^0.56.5",
+		"@unocss/svelte-scoped": "^0.56.5",
+		"@unocss/transformer-variant-group": "^0.56.5",
+		"@unpic/svelte": "^0.0.31",
+		"@zerodevx/svelte-img": "^2.1.0",
+		"autoprefixer": "^10.4.16",
+		"browserslist": "^4.22.1",
+		"browserslist-useragent-regexp": "^4.1.0",
+		"canvas-confetti": "^1.9.0",
+		"change-case": "^4.1.2",
+		"commitizen": "^4.3.0",
+		"dayjs": "^1.11.10",
+		"eslint": "^8.51.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.34.0",
+		"eslint-plugin-unused-imports": "^3.0.0",
+		"histoire": "^0.17.2",
+		"husky": "^8.0.3",
+		"inquirer": "8.2.6",
+		"lightningcss": "^1.22.0",
+		"maskdata": "^1.2.2",
+		"mdsvex": "^0.11.0",
+		"network-information-types": "^0.1.1",
+		"neverthrow": "^6.0.0",
+		"openapi-typescript": "7.0.0-next.2",
+		"postcss": "^8.4.31",
+		"postcss-import": "^15.1.0",
+		"postcss-nesting": "^12.0.1",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.4.1",
+		"semantic-release": "^22.0.5",
+		"serializr": "^3.0.2",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"svelte-i18n": "^3.7.3",
+		"svelte-legos": "^0.2.2",
+		"svelte-meta-tags": "^3.0.4",
+		"svelte-modals": "^1.3.0",
+		"svelte-sequential-preprocessor": "^2.0.1",
+		"sveltekit-embed": "^0.0.12",
+		"tailwindcss": "^3.3.3",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"unocss": "^0.56.5",
+		"unocss-preset-autoprefixer": "^0.0.6",
+		"unocss-preset-radix": "^2.5.5",
+		"vite": "^4.4.11",
+		"vitest": "^0.34.6",
+		"windy-radix-palette": "2.0.0-beta.0",
+		"wretch": "^2.7.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"@roarr/browser-log-writer": "^1.3.0",
+		"@tanstack/svelte-query": "^4.36.1",
+		"roarr": "^7.15.1",
+		"web-vitals": "^3.5.0"
+	},
+	"pnpm": {
+		"peerDependencyRules": {
+			"allowedVersions": {
+				"@rgossiaux/svelte-headlessui>svelte": "4"
+			}
+		},
+		"overrides": {
+			"postcss@<8.4.31": ">=8.4.31"
+		}
+	},
+	"config": {
+		"commitizen": {
+			"path": "@commitlint/cz-commitlint"
+		}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sxyalliance/vegas.git"
+	},
+	"publishConfig": {
+		"access": "restricted"
+	}
 }
