--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@sveltejs/kit": "^1.26.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/canvas-confetti": "^1.6.2",
+		"@types/roarr": "^2.14.5",
 		"@typescript-eslint/eslint-plugin": "^6.8.0",
 		"@typescript-eslint/parser": "^6.8.0",
 		"@unocss/eslint-config": "^0.56.5",
