--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@beyonk/gdpr-cookie-consent-banner": "^11.0.0",
+		"@cloudflare/ai": "^1.0.22",
 		"@commitlint/cli": "^17.8.1",
 		"@commitlint/config-conventional": "^17.8.1",
 		"@commitlint/cz-commitlint": "^17.8.1",
@@ -44,6 +45,7 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.26.0",
+		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/canvas-confetti": "^1.6.2",
 		"@types/roarr": "^2.14.5",
