--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
 	"type": "module",
 	"dependencies": {
 		"@roarr/browser-log-writer": "^1.3.0",
+		"@sentry/sveltekit": "^7.74.1",
 		"@tanstack/svelte-query": "^4.36.1",
 		"roarr": "^7.15.1",
 		"web-vitals": "^3.5.0"
