--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.4.1",
+		"schema-dts": "^1.1.2",
 		"semantic-release": "^22.0.5",
 		"serializr": "^3.0.2",
 		"svelte": "^4.2.2",
