--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
 		"svelte-modals": "^1.3.0",
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"sveltekit-embed": "^0.0.12",
+		"sveltekit-sitemap": "^1.0.21",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
