--- a/project.inlang.json
+++ b/project.inlang.json
@@ -2,7 +2,7 @@
 	"$schema": "https://inlang.com/schema/project-settings",
 	"sourceLanguageTag": "en-US",
 	"languageTags": ["en-US", "zh-HK"],
-	"modules": ["https://cdn.jsdelivr.net/npm/@inlang/plugin-message-format@latest/dist/index.js"],
+	"modules": ["https://cdn.jsdelivr.net/npm/@inlang/plugin-message-format/dist/index.js"],
 	"plugin.inlang.messageFormat": {
 		"filePath": "./static/messages.json"
 	}
