--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
 		"@sveltejs/kit": "^1.27.1",
 		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
+		"@tanstack/svelte-query": "^4.36.1",
+		"@trpc/client": "^10.43.0",
+		"@trpc/server": "^10.43.0",
 		"@types/canvas-confetti": "^1.6.2",
 		"@types/roarr": "^2.14.5",
 		"@typescript-eslint/eslint-plugin": "^6.9.0",
@@ -95,6 +98,8 @@
 		"sveltekit-embed": "^0.0.12",
 		"sveltekit-sitemap": "^1.0.21",
 		"tailwindcss": "^3.3.5",
+		"trpc-svelte-query-adapter": "^2.1.0",
+		"trpc-sveltekit": "^3.5.22",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"unocss": "^0.56.5",
@@ -110,7 +115,6 @@
 	"dependencies": {
 		"@roarr/browser-log-writer": "^1.3.0",
 		"@sentry/sveltekit": "^7.75.1",
-		"@tanstack/svelte-query": "^4.36.1",
 		"roarr": "^7.15.1",
 		"web-vitals": "^3.5.0"
 	},
