--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
 		"dayjs": "^1.11.10",
 		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^9.0.0",
+		"eslint-import-resolver-custom-alias": "^1.3.2",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-svelte": "^2.34.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"histoire": "^0.17.4",
