--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"sveltekit-embed": "^0.0.12",
 		"sveltekit-sitemap": "^1.0.21",
+		"sveltekit-superforms": "^1.9.0",
 		"tailwindcss": "^3.3.5",
 		"trpc-svelte-query-adapter": "^2.1.0",
 		"trpc-sveltekit": "^3.5.22",
@@ -112,7 +113,8 @@
 		"vite-plugin-watch": "^0.2.0",
 		"vitest": "^0.34.6",
 		"windy-radix-palette": "2.0.0-beta.0",
-		"wretch": "^2.7.0"
+		"wretch": "^2.7.0",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
