--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@trpc/client": "^10.43.0",
 		"@trpc/server": "^10.43.0",
 		"@types/canvas-confetti": "^1.6.2",
+		"@types/convict": "^6.1.5",
 		"@types/roarr": "^2.14.5",
 		"@typescript-eslint/eslint-plugin": "^6.9.0",
 		"@typescript-eslint/parser": "^6.9.0",
@@ -66,6 +67,7 @@
 		"canvas-confetti": "^1.9.0",
 		"change-case": "^4.1.2",
 		"commitizen": "^4.3.0",
+		"convict": "^6.2.4",
 		"dayjs": "^1.11.10",
 		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^9.0.0",
