--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"packageManager": "pnpm@8.9.2",
 	"scripts": {
 		"preinstall": "npx only-allow pnpm",
+		"prepare": "husky install",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
