--- a/.github/workflows/update-supabase-types.yml
+++ b/.github/workflows/update-supabase-types.yml
@@ -1,16 +1,39 @@
-name: Update Supabase database types
+name: Update database types
+
 on:
   schedule:
+    # sets the action to run daily. You can modify this to run the action more or less frequently
     - cron: '0 * * * *'
-  workflow_dispatch:
 
 jobs:
-  build:
+  update:
     runs-on: ubuntu-latest
+    env:
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+      PROJECT_REF: ${{ secrets.SUPABASE_REF_ID }}
     steps:
-      - uses: lyqht/generate-supabase-db-types-github-action@main
+      - uses: actions/checkout@v2
         with:
-          SUPABASE_REF_ID: ${{ secrets.SUPABASE_REF_ID }}
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          OUTPUT_PATH: src/lib/shared/supabase/database.types.ts
+          persist-credentials: false
+          fetch-depth: 0
+      - uses: actions/setup-node@v2.1.5
+        with:
+          node-version: 16
+      - run: pnpm supabase gen types typescript --project-id ${SUPABASE_REF_ID} > src/lib/shared/supabase/database.types.ts
+      - name: check for file changes
+        id: git_status
+        run: |
+          echo "::set-output name=status::$(git status -s)"
+      - name: Commit files
+        if: ${{contains(steps.git_status.outputs.status, ' ')}}
+        run: |
+          git add src/lib/shared/supabase/database.types.ts
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -m "chore: update Supabase database types" -a
+      - name: Push changes
+        if: ${{contains(steps.git_status.outputs.status, ' ')}}
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
