--- a/.github/workflows/update-supabase-types.yml
+++ b/.github/workflows/update-supabase-types.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          ref: develop
           persist-credentials: false
           fetch-depth: 0
       - uses: actions/setup-node@v2.1.5
