--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"story:build": "histoire build",
 		"story:preview": "histoire preview",
 		"graphql:codegen": "graphql codegen",
-		"i18n:compile": "node i18n/merge.js && paraglide-js compile --namespace vegas"
+		"i18n:compile": "node i18n/merge.js && paraglide-js compile --outdir src/lib/shared/i18n/compiled"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.8.1",
@@ -103,6 +103,7 @@
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"vite": "^4.5.0",
+		"vite-plugin-circular-dependency": "^0.2.1",
 		"vite-plugin-markdown": "^2.1.0",
 		"vite-plugin-watch": "^0.2.0",
 		"vitest": "^0.34.6",
@@ -112,6 +113,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@inlang/paraglide-js": "1.0.0-prerelease.9",
 		"@roarr/browser-log-writer": "^1.3.0",
 		"@sentry/sveltekit": "^7.75.1",
 		"roarr": "^7.15.1",
