--- a/project.inlang.json
+++ b/project.inlang.json
@@ -2,8 +2,15 @@
 	"$schema": "https://inlang.com/schema/project-settings",
 	"sourceLanguageTag": "en-US",
 	"languageTags": ["en-US", "zh-HK"],
-	"modules": ["https://cdn.jsdelivr.net/npm/@inlang/plugin-message-format/dist/index.js"],
+	"modules": [
+		"https://cdn.jsdelivr.net/npm/@inlang/message-lint-rule-empty-pattern@latest/dist/index.js",
+		"https://cdn.jsdelivr.net/npm/@inlang/message-lint-rule-identical-pattern@latest/dist/index.js",
+		"https://cdn.jsdelivr.net/npm/@inlang/message-lint-rule-missing-translation@latest/dist/index.js",
+		"https://cdn.jsdelivr.net/npm/@inlang/message-lint-rule-without-source@latest/dist/index.js",
+		"https://cdn.jsdelivr.net/npm/@inlang/plugin-message-format@latest/dist/index.js",
+		"https://cdn.jsdelivr.net/npm/@inlang/plugin-m-function-matcher@latest/dist/index.js"
+	],
 	"plugin.inlang.messageFormat": {
-		"filePath": "./static/messages.json"
+		"pathPattern": "./i18n/merged/{languageTag}.json"
 	}
 }
