refactor: make layout to use shadcn ui

--- a/package.json
+++ b/package.json
@@ -73,10 +73,12 @@
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"histoire": "^0.17.5",
 		"husky": "^8.0.3",
+		"iconify-icon": "^1.0.8",
 		"inquirer": "9.2.12",
 		"lightningcss": "^1.22.1",
 		"lucide-svelte": "^0.292.0",
 		"maskdata": "^1.2.6",
+		"mode-watcher": "^0.0.7",
 		"network-information-types": "^0.1.1",
 		"neverthrow": "^6.1.0",
 		"postcss": "^8.4.31",
